Add new base playbook for F5
Change-Id: Id9896f82e1e506694ee9df281db9195107889cf7

--- a/ansible.yaml
+++ b/ansible.yaml
@@ -5,6 +5,9 @@
          environment: linters
       - 'nectar-ansible-{environment}-{playbook}':
          environment: check
+         playbook: f5-base
+      - 'nectar-ansible-{environment}-{playbook}':
+         environment: check
          playbook: f5-certificates
       - 'nectar-ansible-{environment}-{playbook}':
          environment: check
