Add murano-agent and switch to Focal
Change-Id: Iac5c9cc3514034512c572c3b0b6eb445f820ad3b

--- a/python.yaml
+++ b/python.yaml
@@ -622,12 +622,27 @@
       - '{name}-os-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
-         environment: 'py36'
+         environment: 'py38'
       - '{name}-os-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-deb-package':
+      - '{name}-focal-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+
+- project:
+    name: murano-agent
+    jobs:
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'py38'
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'pep8'
+      - '{name}-focal-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
