--- a/images.yaml
+++ b/images.yaml
@@ -235,6 +235,7 @@
                 stage('Deploy to Test Cloud') {{
                     agent {{ label 'bionic' }}
                     steps {{
+                        setImageID()
                         deployImage 'trove', 'testing'
                         setImageProperties 'trove', 'testing'
                     }}
@@ -305,6 +306,7 @@
                 stage('Deploy to Test Cloud') {
                     agent { label 'bionic' }
                     steps {
+                        setImageID()
                         deployImage 'octavia', 'testing'
                         setImageProperties 'octavia', 'testing'
                         setImageTag 'octavia', 'octavia', 'testing'
