--- a/images.yaml
+++ b/images.yaml
@@ -74,7 +74,7 @@
       - 'image-build-trove-{name}'
 
 - project:
-    name: postgresql-11.3
+    name: postgresql-11
     jobs:
       - 'image-build-trove-{name}'
 
@@ -235,6 +235,7 @@
                 stage('Deploy to Test Cloud') {{
                     agent {{ label 'bionic' }}
                     steps {{
+                        setImageID()
                         deployImage 'trove', 'testing'
                         setImageProperties 'trove', 'testing'
                     }}
@@ -305,6 +306,7 @@
                 stage('Deploy to Test Cloud') {
                     agent { label 'bionic' }
                     steps {
+                        setImageID()
                         deployImage 'octavia', 'testing'
                         setImageProperties 'octavia', 'testing'
                         setImageTag 'octavia', 'octavia', 'testing'
@@ -383,6 +385,7 @@
                 stage('Deploy to Dev Cloud') {
                     agent { label 'bionic' }
                     steps {
+                        setImageID()
                         deployImage '\$PROJECT', 'developement'
                         setImageProperties '\$PROJECT', 'development'
                     }
