--- a/images.yaml
+++ b/images.yaml
@@ -1,62 +1,62 @@
 - project:
-    name: centos-6-x86_64
+    name: centos-6
     jobs:
-      - 'image-build-{name}'
+      - 'image-build-official-{name}'
 
 - project:
-    name: centos-7-x86_64
+    name: centos-7
     jobs:
-      - 'image-build-{name}'
+      - 'image-build-official-{name}'
 
 - project:
-    name: centos-8-x86_64
+    name: centos-8
     jobs:
-      - 'image-build-{name}'
+      - 'image-build-official-{name}'
 
 - project:
-    name: debian-9-x86_64
+    name: debian-9
     jobs:
-      - 'image-build-{name}'
+      - 'image-build-official-{name}'
 
 - project:
-    name: debian-10-x86_64
+    name: debian-10
     jobs:
-      - 'image-build-{name}'
+      - 'image-build-official-{name}'
 
 - project:
-    name: fedora-31-x86_64
+    name: fedora-31
     jobs:
-      - 'image-build-{name}'
+      - 'image-build-official-{name}'
 
 - project:
-    name: fedora-32-x86_64
+    name: fedora-32
     jobs:
-      - 'image-build-{name}'
+      - 'image-build-official-{name}'
 
 - project:
-    name: ubuntu-16.04-x86_64
+    name: ubuntu-16.04
     jobs:
-      - 'image-build-{name}'
+      - 'image-build-official-{name}'
 
 - project:
-    name: ubuntu-18.04-x86_64
+    name: ubuntu-18.04
     jobs:
-      - 'image-build-{name}'
+      - 'image-build-official-{name}'
 
 - project:
-    name: ubuntu-19.10-x86_64
+    name: ubuntu-18.04-docker
     jobs:
-      - 'image-build-{name}'
+      - 'image-build-official-{name}'
 
 - project:
-    name: ubuntu-20.04-x86_64
+    name: ubuntu-19.10
     jobs:
-      - 'image-build-{name}'
+      - 'image-build-official-{name}'
 
 - project:
-    name: ubuntu-18.04-x86_64-docker
+    name: ubuntu-20.04
     jobs:
-      - 'image-build-{name}'
+      - 'image-build-official-{name}'
 
 - project:
     name: mysql-5.7
@@ -141,74 +141,78 @@
 
 
 - job-template:
-    name: 'image-build-{name}'
+    name: 'image-build-official-{name}'
     defaults: global
-    node: bionic
-
-    parameters:
-      - string:
-          name: GERRIT_REFSPEC
-          default: refs/heads/master
-          description: "The default ref to test."
-      - string:
-          name: GERRIT_BRANCH
-          default: master
-          description: "The default branch to test."
-      - choice:
-          name: 'AVAILABILITY_ZONE'
-          choices:
-            - melbourne-qh2
-            - auckland
-            - intersect-01
-            - intersect
-            - melbourne
-            - melbourne-qh2-uom
-            - monash-01
-            - monash-02
-            - monash-03
-            - monash
-            - NCI
-            - QRIScloud
-            - swinburne-01
-            - swinburne
-            - tasmania
-            - tasmania-s
-
     properties:
       - authorization:
           nobody:
             - job-read
             - job-discover
-
-    scm:
-      - git:
-         url: ssh://jenkins@review.rc.nectar.org.au:29418/NeCTAR-RC/nectar-images.git
-         credentials-id: 4946c3a5-9f5e-4eac-9ec4-90e1e348db14
-         refspec: $GERRIT_REFSPEC
-         branches:
-          - origin/$GERRIT_BRANCH
-         skip-tag: true
-         wipe-workspace: true
-         clean:
-           after: true
-         choosing-strategy: gerrit
-
-    builders:
-      - image-builder
-
-    wrappers:
-      - credentials-binding:
-        - username-password-separated:
-           credential-id: 7a2e4b77-a292-47a1-b852-c0cfd9c1c383
-           username: IMAGE_BUILDER_USERNAME
-           password: IMAGE_BUILDER_PASSWORD
-        - username-password-separated:
-           credential-id: 6c8091b5-0e7d-4be5-8458-4e5a999acdd6
-           username: IMAGE_PROMOTE_USERNAME
-           password: IMAGE_PROMOTE_PASSWORD
-        - file:
-           credential-id: 10270abc-f1f9-47c7-ae66-114ae8246a71
-           variable: SSH_TESTING_KEY
+    project-type: pipeline
+    sandbox: true
+    dsl: |
+        def imageId
+        def imageName
+        pipeline {{
+            agent {{ label 'bionic' }}
+            options {{
+                preserveStashes(buildCount: 1)
+                ansiColor('xterm')
+            }}
+            stages {{
+                stage('Build Image') {{
+                    steps {{
+                        imageBuildQEMU '{name}'
+                    }}
+                }}
+                stage('Deploy image to RCTest') {{
+                    steps {{
+                        setImageID()
+                        deployImage 'NeCTAR-Images', 'testing'
+                        setImageProperties 'NeCTAR-Images', 'testing'
+                    }}
+                }}
+                stage('Test image in RCTest') {{
+                    steps {{
+                        testImage 'NeCTAR-Images', 'testing', 'coreservices'
+                    }}
+                }}
+                stage('Promote image to RCTest') {{
+                    steps {{
+                        promoteImage 'NeCTAR-Images', 'testing'
+                    }}
+                }}
+                stage('Deploy image to Production') {{
+                    steps {{
+                        deployImage 'NeCTAR-Images', 'production'
+                        setImageProperties 'NeCTAR-Images', 'production'
+                    }}
+                }}
+                stage('Test image in Production') {{
+                    steps {{
+                        testImage 'NeCTAR-Images', 'production', 'melbourne-qh2'
+                    }}
+                }}
+                stage('Promote image to Production') {{
+                    steps {{
+                        promoteImage 'NeCTAR-Images', 'production'
+                    }}
+                }}
+            }}
+            post {{
+                failure {{
+                    node('internal') {{
+                        deleteImage 'NeCTAR-Images', 'testing'
+                        deleteImage 'NeCTAR-Images', 'production'
+                    }}
+                }}
+                cleanup {{
+                    node('bionic') {{
+                        deleteDir() /* clean up our workspace */
+                    }}
+                }}
+            }}
+        }}
 
 
 - job-template:
