Fix function name for official image builder
Change-Id: I93314768c0b72b62850d374c0cf9e977b50dafe5

--- a/images.yaml
+++ b/images.yaml
@@ -174,7 +174,7 @@
                 }}
                 stage('Test image in RCTest') {{
                     steps {{
-                        testImage 'NeCTAR-Images', 'testing', 'coreservices'
+                        testOfficialImage 'NeCTAR-Images', 'testing', 'coreservices'
                     }}
                 }}
                 stage('Promote image to RCTest') {{
