--- a/images.yaml
+++ b/images.yaml
@@ -84,14 +84,14 @@
       - 'image-build-trove-{name}'
 
 - project:
-    name: rstudio-ubuntu-18.04-x86_64
+    name: rstudio
     jobs:
       - 'image-build-extra-{name}':
          source_image: 'NeCTAR Ubuntu 18.04 LTS (Bionic) amd64'
          git_url: 'https://github.com/NeCTAR-RC/packer-rstudio.git'
 
 - project:
-    name: jupyternotebook-ubuntu-18.04-x86_64
+    name: jupyternotebook
     jobs:
       - 'image-build-extra-{name}':
          source_image: 'NeCTAR Ubuntu 18.04 LTS (Bionic) amd64'
@@ -286,6 +286,81 @@
         }}
 
 
+- job-template:
+    name: 'image-build-extra-{name}'
+    defaults: global
+    properties:
+      - authorization:
+          nobody:
+            - job-read
+            - job-discover
+    project-type: pipeline
+    sandbox: true
+    dsl: |
+        def imageId
+        def imageName
+        pipeline {{
+            agent {{ label 'bionic' }}
+            options {{
+                preserveStashes(buildCount: 1)
+                ansiColor('xterm')
+            }}
+            stages {{
+                stage('Build Image') {{
+                    steps {{
+                        imageBuildExtra '{name}', '{source_image}', '{git_repo}'
+                    }}
+                }}
+                stage('Deploy image to RCTest') {{
+                    steps {{
+                        setImageID()
+                        deployImage 'NeCTAR-Images', 'testing'
+                        setImageProperties 'NeCTAR-Images', 'testing'
+                    }}
+                }}
+                stage('Test image in RCTest') {{
+                    steps {{
+                        testOfficialImage 'NeCTAR-Images', 'testing', 'coreservices'
+                    }}
+                }}
+                stage('Promote image to RCTest') {{
+                    steps {{
+                        promoteOfficialImage 'NeCTAR-Images', 'testing'
+                    }}
+                }}
+                stage('Deploy image to Production') {{
+                    steps {{
+                        deployImage 'NeCTAR-Images', 'production'
+                        setImageProperties 'NeCTAR-Images', 'production'
+                    }}
+                }}
+                stage('Test image in Production') {{
+                    steps {{
+                        testOfficialImage 'NeCTAR-Images', 'production', 'melbourne-qh2'
+                    }}
+                }}
+                stage('Promote image to Production') {{
+                    steps {{
+                        promoteOfficialImage 'NeCTAR-Images', 'production'
+                    }}
+                }}
+            }}
+            post {{
+                failure {{
+                    node('internal') {{
+                        deleteImage 'NeCTAR-Images', 'testing'
+                        deleteImage 'NeCTAR-Images', 'production'
+                    }}
+                }}
+                cleanup {{
+                    node('bionic') {{
+                        deleteDir() /* clean up our workspace */
+                    }}
+                }}
+            }}
+        }}
+
+
 - job:
     name: image-build-octavia-amphora
     defaults: global
@@ -356,74 +431,6 @@
                 }
             }
         }
-
-
-- job-template:
-    name: 'image-build-extra-{name}'
-    defaults: global
-    node: bionic
-
-    parameters:
-      - string:
-          name: GERRIT_REFSPEC
-          default: refs/heads/master
-          description: "The default ref to test."
-      - string:
-          name: GERRIT_BRANCH
-          default: master
-          description: "The default branch to test."
-      - choice:
-          name: 'AVAILABILITY_ZONE'
-          choices:
-            - melbourne-qh2
-            - auckland
-            - intersect-01
-            - intersect
-            - melbourne
-            - melbourne-qh2-uom
-            - monash-01
-            - monash-02
-            - monash-03
-            - monash
-            - NCI
-            - QRIScloud
-            - swinburne-01
-            - swinburne
-            - tasmania
-            - tasmania-s
-
-    properties:
-      - authorization:
-          nobody:
-            - job-read
-            - job-discover
-
-    scm:
-      - git:
-         url: "{git_url}"
-         refspec: $GERRIT_REFSPEC
-         branches:
-          - origin/$GERRIT_BRANCH
-         skip-tag: true
-         wipe-workspace: true
-         clean:
-           after: true
-         choosing-strategy: gerrit
-
-    builders:
-      - image-builder-extra:
-         source_image: "{source_image}"
-
-    wrappers:
-      - credentials-binding:
-        - username-password-separated:
-           credential-id: 7a2e4b77-a292-47a1-b852-c0cfd9c1c383
-           username: IMAGE_BUILDER_USERNAME
-           password: IMAGE_BUILDER_PASSWORD
-        - username-password-separated:
-           credential-id: 6c8091b5-0e7d-4be5-8458-4e5a999acdd6
-           username: IMAGE_PROMOTE_USERNAME
-           password: IMAGE_PROMOTE_PASSWORD
 
 
 - job-template:
