Only keep 10 builds for jenkins-jobs update/test
Change-Id: Idea01b1eee4472440dddca652e062fd6071e24c9

--- a/ci.yaml
+++ b/ci.yaml
@@ -64,6 +64,8 @@
           '{access}':
             - job-read
             - job-discover
+      - build-discarder:
+          num-to-keep: 10
 
     triggers:
       - gerrit:
@@ -122,6 +124,8 @@
           '{access}':
             - job-read
             - job-discover
+      - build-discarder:
+          num-to-keep: 10
 
     triggers:
       - gerrit:
