--- a/python.yaml
+++ b/python.yaml
@@ -110,6 +110,10 @@
       - '{name}-bionic-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+         environment: 'py27'
+      - '{name}-bionic-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
          environment: 'flake8'
       - '{name}-focal-deb-package':
          access: 'anonymous'
