Also register trove images in prod but not active
Change-Id: Id46786807be49d7991c104e6dad3fa68a5c00ca4

--- a/images.yaml
+++ b/images.yaml
@@ -249,7 +249,7 @@
                         setImageProperties 'trove', 'testing'
                     }}
                 }}
-                stage('Update trove datastore') {{
+                stage('Update test trove datastore') {{
                     agent {{ label 'internal' }}
                     steps {{
                         updateTroveDatastore 'testing'
@@ -266,6 +266,12 @@
                     steps {{
                         deployImage 'trove', 'production'
                         setImageProperties 'trove', 'production'
+                    }}
+                }}
+                stage('Update production trove datastore') {{
+                    agent {{ label 'internal' }}
+                    steps {{
+                        updateTroveDatastore 'production', '0'
                     }}
                 }}
             }}
