--- a/images.yaml
+++ b/images.yaml
@@ -241,6 +241,26 @@
                         imageBuildQEMU 'trove-{name}'
                     }}
                 }}
+                stage('Set Image ID') {{
+                    agent {{ label 'bionic' }}
+                    steps {{
+                        setImageID()
+                    }}
+                }}
+                stage('Deploy to Dev Cloud') {{
+                    agent {{ label 'bionic' }}
+                    steps {{
+                        setImageID()
+                        deployImage 'trove', 'development'
+                        setImageProperties 'trove', 'development'
+                    }}
+                }}
+                stage('Update dev trove datastore') {{
+                    agent {{ label 'internal' }}
+                    steps {{
+                        updateTroveDatastore 'development'
+                    }}
+                }}
                 stage('Deploy to Test Cloud') {{
                     agent {{ label 'bionic' }}
                     steps {{
