Add monash-test into tempest jobs
Change-Id: I524eb2ba878faf1dffc6a0917031b2d8c8840c81

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -1218,6 +1218,7 @@
             - tasmania-s
             - coreservices
             - qh2-test
+            - monash-test
             - lani
             - luna
           description: 'Availability zone.'
