Add aardvark jobs
Change-Id: I07ab95f85402a2ff9d995584bb3179561742c242

--- a/python.yaml
+++ b/python.yaml
@@ -241,6 +241,26 @@
          organisation: 'NeCTAR-RC'
 
 - project:
+    name: aardvark
+    jobs:
+      - '{name}-bionic-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'py36'
+      - '{name}-focal-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'py38'
+      - '{name}-focal-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'pep8'
+      - '{name}-bionic-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'cover'
+
+- project:
     name: manuka
     jobs:
       - '{name}-os-tox-{environment}':
