--- a/containers.yaml
+++ b/containers.yaml
@@ -4,6 +4,10 @@
     project-type: pipeline
     sandbox: true
 
+    properties:
+      - copyartifact:
+          projects: '*'
+
     parameters:
       - string:
           name: GERRIT_REFSPEC
@@ -109,6 +113,17 @@
                   build(job: 'magnum-containers')
                 }
               }
+              stage('Aardvark') {
+                steps {
+                  build(
+                    job: 'aardvark-containers',
+                    parameters: [
+                      string(name: 'GERRIT_REFSPEC', value: 'refs/heads/nectar/master'),
+                      string(name: 'GERRIT_BRANCH', value: 'nectar/master'),
+                    ]
+                  )
+                }
+              }
             }
           }
         }
@@ -141,6 +156,8 @@
               branches:
                 - branch-compare-type: 'PLAIN'
                   branch-pattern: 'nectar/train'
+                - branch-compare-type: 'PLAIN'
+                  branch-pattern: 'nectar/master'
           silent: false
           escape-quotes: true
           skip-vote:
