--- a/containers.yaml
+++ b/containers.yaml
@@ -80,10 +80,21 @@
             }
           }
           stage('Build requirements image') {
+            environment {
+              REGISTRY = credentials('registry')
+            }
             steps {
                 sh '''
                 export BUILDAH_FORMAT=docker
-                make BUILDER=podman REPO=src requirements
+
+                export REGISTRY="registry.rc.nectar.org.au"
+                export REGISTRY_AUTH_FILE=auth.json
+                echo "$REGISTRY_PSW" | podman login -u "$REGISTRY_USR" --password-stdin "$REGISTRY"
+
+                make BUILDER=podman DOCKER_REPO="$REGISTRY/loci" REPO=src requirements
+
+                rm auth.json
+
                 mkdir -p artifacts
                 git -C src rev-parse --verify --short HEAD > artifacts/REQUIREMENTS_VERSION
                 git rev-parse --verify --short HEAD > artifacts/LOCI_VERSION
@@ -239,6 +250,9 @@
             }}
           }}
           stage('Build') {{
+            environment {{
+              REGISTRY = credentials('registry')
+            }}
             steps {{
                 copyArtifacts(
                   projectName: 'requirements-container',
@@ -249,7 +263,14 @@
                 echo "Building $GERRIT_BRANCH ($GERRIT_REFSPEC)"
                 export BUILDAH_FORMAT=docker
                 export REQUIREMENTS_SHA=`cat artifacts/REQUIREMENTS_VERSION`
-                make BUILDER=podman REPO=src REQUIREMENTS_SHA=$REQUIREMENTS_SHA {name}
+
+                export REGISTRY="registry.rc.nectar.org.au"
+                export REGISTRY_AUTH_FILE=auth.json
+                echo "$REGISTRY_PSW" | podman login -u "$REGISTRY_USR" --password-stdin "$REGISTRY"
+
+                make BUILDER=podman DOCKER_REPO="$REGISTRY/loci" REPO=src REQUIREMENTS_SHA=$REQUIREMENTS_SHA {name}
+
+                rm auth.json
                 '''
             }}
           }}
