Add victoria tox jobs
Change-Id: I86ff2b3208473bba19e38a8f84415f0c38458431

--- a/tox.yaml
+++ b/tox.yaml
@@ -19,6 +19,9 @@
       - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
             ubuntu_release: 'focal'
             os_release: 'ussuri'
+      - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
+            ubuntu_release: 'focal'
+            os_release: 'victoria'
 
 
 - job-template:
