Add puppet-podman CI
Change-Id: I0a3fef8bc55ab120d3cbcf4031095f0c2d3e175e

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -436,6 +436,13 @@
          organisation: 'NeCTAR-RC'
 
 - project:
+    name: puppet-podman
+    jobs:
+      - '{name}-puppet-unit':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+
+- project:
     name: puppet-postfix
     jobs:
       - '{name}-puppet-unit':
