Add loci dummy job
Change-Id: Icfe51fb6d786f5571f1320ff924b53d688178e81

--- a/other.yaml
+++ b/other.yaml
@@ -475,3 +475,10 @@
       - 'requirements-container':
          access: 'nobody'
          organisation: 'internal'
+
+- project:
+    name: loci
+    jobs:
+      - '{name}-dummy':
+         access: 'nobody'
+         organisation: 'NeCTAR-RC'
