--- a/other.yaml
+++ b/other.yaml
@@ -472,9 +472,16 @@
       - '{name}-dummy':
          access: 'nobody'
          organisation: 'internal'
-      - 'requirements-container':
+      - 'requirements-container-{ubuntu_release}-{os_release}':
          access: 'nobody'
          organisation: 'internal'
+         ubuntu_release: 'bionic'
+         os_release: 'train'
+      - 'requirements-container-{ubuntu_release}-{os_release}':
+         access: 'nobody'
+         organisation: 'internal'
+         ubuntu_release: 'focal'
+         os_release: 'victoria'
 
 - project:
     name: loci
