--- a/python.yaml
+++ b/python.yaml
@@ -37,19 +37,19 @@
 - project:
     name: langstroth
     jobs:
-      - '{name}-bionic-tox-{environment}':
+      - '{name}-focal-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
-         environment: 'py36'
-      - '{name}-bionic-tox-{environment}':
+         environment: 'py38'
+      - '{name}-focal-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'flake8'
-      - '{name}-bionic-tox-{environment}':
+      - '{name}-focal-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
-         environment: 'jshint'
-      - '{name}-bionic-deb-package':
+         environment: 'jshint
+      - '{name}-focal-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
