Switch site-deploy Gerrit trigger to `ref-updated`
This ensures we catch direct pushes to the repo from CI.

Change-Id: I8b96ea42a472ae961ceffae5e8e1a1474b438371

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -1016,7 +1016,7 @@
     triggers:
       - gerrit:
           trigger-on:
-              - change-merged-event
+              - ref-updated-event
           projects:
             - project-compare-type: 'PLAIN'
               project-pattern: '{organisation}/{name}'
