--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -1012,6 +1012,10 @@
           name: GERRIT_BRANCH
           default: master
           description: "The default branch to test."
+      - string:
+          name: GERRIT_PROJECT
+          default: '{organisation}/{name}'
+          description: "The fully qualified project name."
 
     triggers:
       - gerrit:
